[API] update user pagination to get roles and profile pagination to get user
