# src/v1/user/controllers.ts
@@ -1,7 +1,18 @@
 import dotenv from 'dotenv';
 import { Query as MysqlQuery } from './services/mysql';
 import { Query as MongoQuery } from './services/mongo';
-import { IUserInsert, IUserUpdate, IUser, IPaginationUser, IPaginationUserResp, IUserProfileInfo, ISearchUser } from './user.type';
+import { Query as  MysqlRoleQuery } from '../role/services/mysql';
+import { 
+	IUserInsert, 
+	IUserUpdate, 
+	IUser, 
+	IPaginationUser, 
+	IPaginationUserResp, 
+	IUserProfileInfo, 
+	ISearchUser,
+	IPaginationProfileResp,
+	IUserWithRoles
+} from './user.type';
 import { IResponse, ISuccessResponse } from "../utils/common.type";
 import { Get, Post, Put, Delete, Route, SuccessResponse, Example, Path, Body, Queries } from "tsoa";
 
@@ -10,11 +21,14 @@ dotenv.config();
 @Route("v1")
 export class Controller {
 	query: any
+	roleQuery: any
   constructor(){
 		let Query;
+		let RoleQuery;
 		switch(process.env.DB_TYPE){
 				case('mysql'):
 					Query = new MysqlQuery();
+					RoleQuery = new MysqlRoleQuery();
 					break;
 				case('mongo'):
 					Query = new MongoQuery();
@@ -22,6 +36,7 @@ export class Controller {
 		}
 		
 		this.query = Query;
+		this.roleQuery = RoleQuery;
 	}
 
 	@Get("users")
@@ -77,7 +92,8 @@ export class Controller {
 				"is_sso_user": false,
 				"sso_user_id": null,
 				"sso_from": null,
-				"status": "active"
+				"status": "active",
+				"roles": ['User']
 			}
 		],
 		"pagination": {
@@ -93,12 +109,86 @@ export class Controller {
 			if ((query.limit === 0) || (query.page === 0)) resolve({error: true, message: 'User: Invalid request'});
 			else {
 				let result = await this.query.getUserPagination(query.limit, (query.page - 1) * query.limit );
+				if (result.hasOwnProperty('error')) resolve(result);
+				else {
+					let users_roles: IUserWithRoles[] = await Promise.all(result.map( async (user: any) => {
+						let roles_result = await this.roleQuery.getRolesByUserId(user.id);
+						user.roles = [];
+						if (roles_result) {
+							user.roles = roles_result
+						}
+						return user;
+					}))
+
+					let { recordCount } = await this.query.getUserCount();
+					let totalPage: number  = Math.ceil(recordCount / query.limit); // round up
+					let nextPage: number | null = null;
+					let prevPage: number | null = null;
+
+					if (query.page + 1 <= totalPage) nextPage = query.page + 1;
+					if (query.page - 1 >= 1) prevPage = query.page - 1;
+
+					resolve({
+						data: users_roles,
+						pagination: {
+							total_records: recordCount,
+							current_page: query.page,
+							total_pages: totalPage,
+							next_page: nextPage,
+							prev_page: prevPage
+						}
+					});
+
+				}
+			}
+		});
+	}
+
+	@Get("/pagination/profiles")
+	@SuccessResponse("200", "Get users profiles pagination")
+	@Example<IPaginationProfileResp>({
+		"data": [
+			{
+				"user_id": "3",
+				"profile_id": "4",
+    		"username": "test2",
+    		"email": "john2@email.com",
+    		"is_sso_user": false,
+    		"sso_user_id": null,
+    		"sso_from": null,
+    		"status": "active",
+				"first_name_EN": "test",
+				"last_name_EN": "test",
+				"first_name_TH": "test",
+				"last_name_TH": "test",
+				"gender": "male",
+				"date_of_birth": 1699516723,
+				"address_EN": "test",
+				"address_TH": "test",
+				"zip_code": 29000,
+				"phone": "+66939999999",
+				"image_profile": "https://image_profile_url.test"
+			}
+		],
+		"pagination": {
+			"total_records": 8,
+			"current_page": 1,
+			"total_pages": 3,
+			"next_page": 2,
+			"prev_page": null
+		}
+  })
+	getUserProfilePagination(@Queries() query: IPaginationUser): Promise<IResponse | IPaginationProfileResp>{
+		return new Promise( async resolve => {
+			if ((query.limit === 0) || (query.page === 0)) resolve({error: true, message: 'Profile: Invalid request'});
+			else {
+				let result = await this.query.getUserProfilePagination(query.limit, (query.page - 1) * query.limit );
 
 				if (result.hasOwnProperty('error')) resolve(result);
 				else {
 
-					let { userCount } = await this.query.getUserCount();
-					let totalPage: number  = Math.ceil(userCount / query.limit); // round up
+					let { recordCount } = await this.query.getProfileCount();
+					let totalPage: number  = Math.ceil(recordCount / query.limit); // round up
 					let nextPage: number | null = null;
 					let prevPage: number | null = null;
 
@@ -108,7 +198,7 @@ export class Controller {
 					resolve({
 						data: result,
 						pagination: {
-							total_records: userCount,
+							total_records: recordCount,
 							current_page: query.page,
 							total_pages: totalPage,
 							next_page: nextPage,
